crates/assay-types/tests/snapshots/schema_snapshots__gossip-config-schema.snap
---
source: crates/assay-types/tests/schema_snapshots.rs
expression: schema.to_value()
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "description": "Configuration for Gossip coordination mode.\n\nControls the coordinator broadcast interval used when `mode = \"gossip\"`.",
  "properties": {
    "coordinator_interval_secs": {
      "default": 5,
      "description": "Interval in seconds between coordinator gossip rounds. Defaults to 5.",
      "format": "uint64",
      "minimum": 0,
      "type": "integer"
    }
  },
  "title": "GossipConfig",
  "type": "object"
}
