crates/assay-types/tests/snapshots/schema_snapshots__gossip-status-schema.snap
---
source: crates/assay-types/tests/schema_snapshots.rs
expression: schema.to_value()
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "description": "Aggregate gossip coordination status snapshot.\n\nWritten into [`OrchestratorStatus::gossip_status`] on each coordinator\ncycle and on run completion. Readable via\n`cat .assay/orchestrator/<run_id>/state.json | jq .gossip_status`.",
  "properties": {
    "coordinator_rounds": {
      "description": "Number of coordinator synthesis rounds completed.",
      "format": "uint32",
      "minimum": 0,
      "type": "integer"
    },
    "knowledge_manifest_path": {
      "description": "Absolute path to `knowledge.json` on disk.",
      "type": "string"
    },
    "sessions_synthesized": {
      "description": "Number of sessions whose results have been synthesized into the\nknowledge manifest so far.",
      "format": "uint32",
      "minimum": 0,
      "type": "integer"
    }
  },
  "required": [
    "sessions_synthesized",
    "knowledge_manifest_path",
    "coordinator_rounds"
  ],
  "title": "GossipStatus",
  "type": "object"
}
