crates/assay-types/tests/snapshots/schema_snapshots__harness-profile-schema.snap
---
source: crates/assay-types/tests/schema_snapshots.rs
expression: schema.to_value()
---
{
  "$defs": {
    "HookContract": {
      "additionalProperties": false,
      "description": "A lifecycle hook that runs an external command at a specific event.",
      "properties": {
        "command": {
          "description": "Shell command to execute when the event fires.",
          "type": "string"
        },
        "event": {
          "$ref": "#/$defs/HookEvent",
          "description": "The lifecycle event that triggers this hook."
        },
        "timeout_secs": {
          "description": "Maximum seconds to wait for the command to complete.",
          "format": "uint64",
          "minimum": 0,
          "type": [
            "integer",
            "null"
          ]
        }
      },
      "required": [
        "event",
        "command"
      ],
      "type": "object"
    },
    "HookEvent": {
      "description": "Lifecycle event that the harness can hook into.\n\nHooks fire at specific points during agent execution:\n- `PreTool`: before a tool invocation\n- `PostTool`: after a tool invocation completes\n- `Stop`: when the agent session is stopping",
      "oneOf": [
        {
          "const": "pre-tool",
          "description": "Fires before a tool invocation.",
          "type": "string"
        },
        {
          "const": "post-tool",
          "description": "Fires after a tool invocation completes.",
          "type": "string"
        },
        {
          "const": "stop",
          "description": "Fires when the agent session is stopping.",
          "type": "string"
        }
      ]
    },
    "PromptLayer": {
      "additionalProperties": false,
      "description": "A single prompt layer contributing to the assembled agent prompt.\n\nPrompt layers are assembled in priority order (lowest `priority` value first)\nto build the final system prompt for an agent session.",
      "properties": {
        "content": {
          "description": "The prompt text content.",
          "type": "string"
        },
        "kind": {
          "$ref": "#/$defs/PromptLayerKind",
          "description": "Category of this prompt layer."
        },
        "name": {
          "description": "Human-readable name for identification and debugging.",
          "type": "string"
        },
        "priority": {
          "description": "Ordering hint for assembly (lower values assemble first).",
          "format": "int32",
          "type": "integer"
        }
      },
      "required": [
        "kind",
        "name",
        "content",
        "priority"
      ],
      "type": "object"
    },
    "PromptLayerKind": {
      "description": "Category of a prompt layer, determining its priority tier in assembly.\n\nVariants are ordered from highest built-in priority to custom:\n- `System`: foundational agent instructions\n- `Project`: project-level context and conventions\n- `Spec`: spec-specific acceptance criteria and constraints\n- `Custom`: user-defined layers injected at arbitrary priority",
      "oneOf": [
        {
          "const": "system",
          "description": "Foundational agent instructions (highest built-in priority).",
          "type": "string"
        },
        {
          "const": "project",
          "description": "Project-level context and conventions.",
          "type": "string"
        },
        {
          "const": "spec",
          "description": "Spec-specific acceptance criteria and constraints.",
          "type": "string"
        },
        {
          "const": "custom",
          "description": "User-defined layer injected at arbitrary priority.",
          "type": "string"
        }
      ]
    },
    "SettingsOverride": {
      "additionalProperties": false,
      "description": "Settings overrides applied to an agent session.\n\nAll fields are optional or default-empty — only specified values override\nthe base configuration.",
      "properties": {
        "max_turns": {
          "description": "Maximum number of agent turns before forced stop.",
          "format": "uint32",
          "minimum": 0,
          "type": [
            "integer",
            "null"
          ]
        },
        "model": {
          "description": "Model identifier to use (e.g., `\"sonnet\"`, `\"opus\"`).",
          "type": [
            "string",
            "null"
          ]
        },
        "permissions": {
          "description": "Permissions granted to the agent (e.g., `\"filesystem\"`, `\"network\"`).",
          "items": {
            "type": "string"
          },
          "type": "array"
        },
        "tools": {
          "description": "Tools available to the agent (e.g., `\"bash\"`, `\"browser\"`).",
          "items": {
            "type": "string"
          },
          "type": "array"
        }
      },
      "type": "object"
    }
  },
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "description": "Complete agent configuration profile for a harness session.\n\nCombines prompt layers, settings overrides, and lifecycle hooks into a\nsingle deployable configuration unit. Consumed by the harness runtime\nto configure and launch agent sessions.",
  "properties": {
    "hooks": {
      "description": "Lifecycle hooks triggered during agent execution.",
      "items": {
        "$ref": "#/$defs/HookContract"
      },
      "type": "array"
    },
    "name": {
      "description": "Unique name identifying this profile.",
      "type": "string"
    },
    "prompt_layers": {
      "description": "Prompt layers assembled into the agent's system prompt.",
      "items": {
        "$ref": "#/$defs/PromptLayer"
      },
      "type": "array"
    },
    "settings": {
      "$ref": "#/$defs/SettingsOverride",
      "description": "Settings overrides applied to the agent session."
    },
    "working_dir": {
      "description": "Working directory for agent execution.",
      "type": [
        "string",
        "null"
      ]
    }
  },
  "required": [
    "name",
    "settings"
  ],
  "title": "HarnessProfile",
  "type": "object"
}
