crates/assay-types/tests/snapshots/schema_snapshots__hook-event-schema.snap
---
source: crates/assay-types/tests/schema_snapshots.rs
expression: schema.to_value()
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "description": "Lifecycle event that the harness can hook into.\n\nHooks fire at specific points during agent execution:\n- `PreTool`: before a tool invocation\n- `PostTool`: after a tool invocation completes\n- `Stop`: when the agent session is stopping",
  "oneOf": [
    {
      "const": "pre-tool",
      "description": "Fires before a tool invocation.",
      "type": "string"
    },
    {
      "const": "post-tool",
      "description": "Fires after a tool invocation completes.",
      "type": "string"
    },
    {
      "const": "stop",
      "description": "Fires when the agent session is stopping.",
      "type": "string"
    }
  ],
  "title": "HookEvent"
}
